--- a/S09_T02_Supervised_Learning_Regressions.ipynb
+++ b/S09_T02_Supervised_Learning_Regressions.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Description   \n",
+    "# 🤖Statement\n",
     "\n",
     "Let's practice and become familiar with regression.\n",
     "\n",
@@ -43,9 +43,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Level 1  \n",
+    "# [Level 1](#)\n",
     "\n",
-    "## - Exercise 1\n",
+    "## Exercise 1\n",
     "\n",
     "Create at least three different regression models to try to predict as well as possible the flight delay (ArrDelay) of DelayedFlights.csv."
    ]
@@ -945,40 +945,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 58,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with train data: 0.895\n"
+      "coefficient of determination with train data: 1.000\n"
      ]
     }
    ],
    "source": [
     "# Calculate R2 to see the accuracy of the model with train data.\n",
     "r_sq_train2 = model2.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train)"
+    "print('coefficient of determination with train data: %.3f' %r_sq_train2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 59,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with test data: 0.902\n"
+      "coefficient of determination with test data: 1.000\n"
      ]
     }
    ],
    "source": [
     "# Calculate R2 to see the accuracy of the model with test data.\n",
     "r_sq_test2 = model2.score(X_test,y_test)\n",
-    "print('coefficient of determination with test data: %.3f' %r_sq_test)"
+    "print('coefficient of determination with test data: %.3f' %r_sq_test2)"
    ]
   },
   {
@@ -1812,16 +1812,126 @@
    "metadata": {},
    "source": [
     "\n",
-    "## Exercise 4 - Compare their performance using the test/train approach or using all data (internal validation).\n"
+    "## Exercise 4 - Compare their performance using the test/train approach or using all data (internal validation).\n",
+    "\n",
+    "Previously, we have used the test/train approach. Let's now use all data (internal validation) and check if R^2 changes."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 51,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(19283, 34)"
+      ]
+     },
+     "execution_count": 51,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "#Let's concatenate df_train & df_test\n",
+    "df_complete = pd.concat([df_train,df_test])\n",
+    "df_complete.shape"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# All samples have been combined.\n",
+    "# Now let's create the models with all data now and test R^2\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "pandas.core.arrays.numpy_.PandasArray"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Our Y or Target is ArrDelay:\n",
+    "y_complete = df_complete.ArrDelay\n",
+    "y_complete = y_complete.array # Convert pandas series to numpy array\n",
+    "type(y_complete)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "numpy.ndarray"
+      ]
+     },
+     "execution_count": 54,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Our X now is going to be all the columns in df_complete except ArrDelay and Date (also the OHE of Airline)\n",
+    "X_complete = df_complete.drop(columns=[\"ArrDelay\",\"Date\"])\n",
+    "feature_list = list(X_complete.columns) # Saving feature names for later use\n",
+    "X_complete = X_complete.to_numpy() # Convert dataframe to array\n",
+    "type(X_complete)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Fit the model ( calculate b0...bn for the multiple lineal model y = b0 + b1x1 +... + bnxn)\n",
+    "model2 = LinearRegression().fit(X_complete,y_complete)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coefficient of determination with complete data: 1.000\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Calculate R2 to see the accuracy of the model with complete data.\n",
+    "r_sq_complete2 = model2.score(X_complete,y_complete)\n",
+    "print('coefficient of determination with complete data: %.3f' %r_sq_complete2)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Level 2\n",
+    "# [Level 2](#)\n",
     "\n",
-    "## Exercise 5 Perform some variable engineering process to improve your prediction.\n"
+    "## Exercise 5 - Perform some variable engineering process to improve your prediction.\n"
    ]
   },
   {
@@ -1829,7 +1939,7 @@
    "metadata": {},
    "source": [
     "\n",
-    "# Level 3 \n",
+    "# [Level 3](#)\n",
     "\n",
     "## Exercise 6 - Do not use the DepDelay variable when making predictions."
    ]
