--- a/S09_T02_Supervised_Learning_Regressions.ipynb
+++ b/S09_T02_Supervised_Learning_Regressions.ipynb
@@ -1584,14 +1584,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 61,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with train data: 1.000\n"
+      "coefficient of determination with train data: 0.995\n"
      ]
     }
    ],
@@ -1602,7 +1602,7 @@
     "model3.fit(X_train, y_train)\n",
     "# Calculate R2 to see the accuracy of the model with train data.\n",
     "r_sq_train3 = model3.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train2)"
+    "print('coefficient of determination with train data: %.3f' %r_sq_train3)"
    ]
   },
   {
@@ -1698,7 +1698,6 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "### 3.3.- Neural Network Regression Model"
    ]
   },
@@ -1801,7 +1800,7 @@
    "metadata": {},
    "source": [
     "#### Observation 9.\n",
-    "* Same as with Random Forest, R2 ise always 1, so we are not seen difference in accuracy changing the parameters.  \n",
+    "* Same as with Random Forest, R2 is always 1, so we are not seen difference in accuracy changing the parameters.  \n",
     "Probably when we take off the dependent variable these results will change.\n",
     "* See comments in code, we have changed the number of hidden layers, affecting to the calculation speed of the model. \n",
     "* Also activation and solver was changed, but with no different results. (R2 = 1)"
@@ -1811,10 +1810,16 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "\n",
     "## Exercise 4 - Compare their performance using the test/train approach or using all data (internal validation).\n",
     "\n",
     "Previously, we have used the test/train approach. Let's now use all data (internal validation) and check if R^2 changes."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.1.- Multiple Linear Regression Model"
    ]
   },
   {
@@ -1902,6 +1907,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "## Let's test our last 3 models\n",
     "# Fit the model ( calculate b0...bn for the multiple lineal model y = b0 + b1x1 +... + bnxn)\n",
     "model2 = LinearRegression().fit(X_complete,y_complete)"
    ]
@@ -1922,7 +1928,72 @@
    "source": [
     "# Calculate R2 to see the accuracy of the model with complete data.\n",
     "r_sq_complete2 = model2.score(X_complete,y_complete)\n",
-    "print('coefficient of determination with complete data: %.3f' %r_sq_complete2)"
+    "print('coefficient of determination with all data: %.3f' %r_sq_complete2)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.2.- Random Forest Regression Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coefficient of determination with all data: 0.996\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Instantiate model with 100 decision trees\n",
+    "model3 = RandomForestRegressor(n_estimators = 100, random_state = 42)\n",
+    "# Train the model on training data\n",
+    "model3.fit(X_complete, y_complete)\n",
+    "# Calculate R2 to see the accuracy of the model with all data.\n",
+    "r_sq_train3 = model3.score(X_complete,y_complete)\n",
+    "print('coefficient of determination with all data: %.3f' %r_sq_train3)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### 4.3.- Neural Network Regression Model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "coefficient of determination with all data: 0.999\n"
+     ]
+    }
+   ],
+   "source": [
+    "model4 = MLPRegressor(activation='relu',solver='adam',random_state=1, max_iter=500)\n",
+    "model4.fit(X_complete,y_complete)\n",
+    "# Calculate R2 to see the accuracy of the model with train data.\n",
+    "r_sq_train4 = model4.score(X_complete,y_complete)\n",
+    "print('coefficient of determination with all data: %.3f' %r_sq_train4)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We don't see a lot of difference between using all data or the train / test split."
    ]
   },
   {
@@ -1931,7 +2002,21 @@
    "source": [
     "# [Level 2](#)\n",
     "\n",
-    "## Exercise 5 - Perform some variable engineering process to improve your prediction.\n"
+    "## Exercise 5 - Perform some variable engineering process to improve your prediction.\n",
+    "\n",
+    "Previously, on Task S0901, we have preprocessed the dataset, doing the following processes:\n",
+    "\n",
+    "* NaN cleaning   \n",
+    "* deleted duplicates\n",
+    "* created colum Date of Flight  \n",
+    "* deleted columns non relevant (as kind of delay, cancelled or diverted flights)    \n",
+    "* standardize all numerical columns (except for day of week)\n",
+    "* OHE of Unique Carrier attribute.\n",
+    "\n",
+    "So now, we have to perform some other variable engineering process to improve our prediction. Although, our prediction in almost all models is\n",
+    "a perfect fit, we will try to do it also because, lately, in Ex.6, we will execute again the whole notebook, but without the DepDelay variable.\n",
+    "\n",
+    "At this moment, we have very few time, and we have already perform variable engineering processes. We will left this additional level for later."
    ]
   },
   {
@@ -1941,7 +2026,10 @@
     "\n",
     "# [Level 3](#)\n",
     "\n",
-    "## Exercise 6 - Do not use the DepDelay variable when making predictions."
+    "## Exercise 6 - Do not use the DepDelay variable when making predictions.\n",
+    "\n",
+    "We are going to execute the whole notebook but without the DepDelay variable.\n",
+    "See notebook S09_T02_Ex02 (Execution 2)"
    ]
   }
  ],
