--- a/S09_T02_Supervised_Learning_Regressions.ipynb
+++ b/S09_T02_Supervised_Learning_Regressions.ipynb
@@ -52,7 +52,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -65,7 +65,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -86,7 +86,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -756,7 +756,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -774,7 +774,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -798,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -822,7 +822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,7 +832,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -851,7 +851,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +870,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -879,7 +879,7 @@
        "(12919,)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -908,7 +908,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -921,7 +921,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -935,7 +935,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -945,7 +945,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -964,7 +964,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 59,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -983,7 +983,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -997,14 +997,14 @@
     }
    ],
    "source": [
-    "# Applying k-Fold Cross Validation (CV) with train data\n",
+    "# Applying k-Fold Cross Validation (CV) with train data (we could/should do it with all the data - this will be done on Exercise 4)\n",
     "accuracies2a = cross_val_score(estimator = model2, X=X_train, y=y_train , cv = 10)\n",
     "print(\"Multiple Linear Regression:\\n Accuracy with train data:\", accuracies2a.mean(), \"+/-\", accuracies2a.std(),\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -1018,14 +1018,14 @@
     }
    ],
    "source": [
-    "# Applying k-Fold Cross Validation (CV) with test data\n",
+    "# Applying k-Fold Cross Validation (CV) with test data (we could/should do it with all the data - this will be done on Exercise 4)\n",
     "accuracies2b = cross_val_score(estimator = model2, X=X_test, y=y_test , cv = 10)\n",
     "print(\"Multiple Linear Regression:\\n Accuracy with test data:\", accuracies2b.mean(), \"+/-\", accuracies2b.std(),\"\\n\")"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -1034,7 +1034,7 @@
        "(12919,)"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1067,7 +1067,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -1076,7 +1076,7 @@
        "RandomForestRegressor(n_estimators=10, random_state=42)"
       ]
      },
-     "execution_count": 20,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1093,25 +1093,6 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "coefficient of determination with train data: 1.000\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Calculate R2 to see the accuracy of the model with train data.\n",
-    "r_sq_train3 = model3.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train2)"
-   ]
-  },
-  {
-   "cell_type": "code",
    "execution_count": 22,
    "metadata": {},
    "outputs": [
@@ -1119,14 +1100,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with test data: 1.000\n"
+      "coefficient of determination with train data: 0.992\n"
      ]
     }
    ],
    "source": [
-    "# Calculate R2 to see the accuracy of the model with test data.\n",
-    "r_sq_test3 = model3.score(X_test,y_test)\n",
-    "print('coefficient of determination with test data: %.3f' %r_sq_test2)"
+    "# Calculate R2 to see the accuracy of the model with train data.\n",
+    "r_sq_train3 = model3.score(X_train,y_train)\n",
+    "print('coefficient of determination with train data: %.3f' %r_sq_train3)"
    ]
   },
   {
@@ -1138,16 +1119,14 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "RandomForestRegressor:\n",
-      " Accuracy: 0.9565624734757234 +/- 0.007685769658961897 \n",
-      "\n"
+      "coefficient of determination with test data: 0.965\n"
      ]
     }
    ],
    "source": [
-    "# Applying k-Fold Cross Validation (CV)\n",
-    "accuracies3 = cross_val_score(estimator = model3, X=X_train, y=y_train , cv = 10)\n",
-    "print(\"RandomForestRegressor:\\n Accuracy:\", accuracies3.mean(), \"+/-\", accuracies3.std(),\"\\n\")"
+    "# Calculate R2 to see the accuracy of the model with test data.\n",
+    "r_sq_test3 = model3.score(X_test,y_test)\n",
+    "print('coefficient of determination with test data: %.3f' %r_sq_test3)"
    ]
   },
   {
@@ -1166,7 +1145,7 @@
     }
    ],
    "source": [
-    "# Applying k-Fold Cross Validation (CV) with train data\n",
+    "# Applying k-Fold Cross Validation (CV) with train data (we could/should do it with all the data - this will be done on Exercise 4)\n",
     "accuracies3a = cross_val_score(estimator = model3, X=X_train, y=y_train , cv = 10)\n",
     "print(\"RandomForest Regression:\\n Accuracy:\", accuracies3a.mean(), \"+/-\", accuracies3a.std(),\"\\n\")"
    ]
@@ -1187,7 +1166,7 @@
     }
    ],
    "source": [
-    "# Applying k-Fold Cross Validation (CV) with test data\n",
+    "# Applying k-Fold Cross Validation (CV) with test data (we could/should do it with all the data - this will be done on Exercise 4)\n",
     "accuracies3b = cross_val_score(estimator = model3, X=X_test, y=y_test , cv = 10)\n",
     "print(\"RandomForest Regression:\\n Accuracy:\", accuracies3b.mean(), \"+/-\", accuracies3b.std(),\"\\n\")"
    ]
@@ -1317,7 +1296,7 @@
     }
    ],
    "source": [
-    "# Applying k-Fold Cross Validation (CV) with train data\n",
+    "# Applying k-Fold Cross Validation (CV) with train data (we could/should do it with all the data - this will be done on Exercise 4)\n",
     "accuracies4a = cross_val_score(estimator = model4, X=X_train, y=y_train , cv = 10)\n",
     "print(\"Neural Network Regression:\\n Accuracy:\", accuracies4a.mean(), \"+/-\", accuracies4a.std(),\"\\n\")"
    ]
@@ -1338,7 +1317,7 @@
     }
    ],
    "source": [
-    "# Applying k-Fold Cross Validation (CV) with test data\n",
+    "# Applying k-Fold Cross Validation (CV) with test data (we could/should do it with all the data - this will be done on Exercise 4)\n",
     "accuracies4b = cross_val_score(estimator = model4, X=X_test, y=y_test , cv = 10)\n",
     "print(\"Neural Network Regression:\\n Accuracy:\", accuracies4b.mean(), \"+/-\", accuracies4b.std(),\"\\n\")"
    ]
@@ -1500,14 +1479,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with train data: 0.895\n"
+      "coefficient of determination with train data: 1.000\n"
      ]
     }
    ],
@@ -1517,19 +1496,19 @@
     "model2 = LinearRegression().fit(X_train,y_train)\n",
     "# Calculate R2 to see the accuracy of the model with train data.\n",
     "r_sq_train2 = model2.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train)\n"
+    "print('coefficient of determination with train data: %.3f' %r_sq_train2)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with train data: 0.895\n"
+      "coefficient of determination with train data: 1.000\n"
      ]
     }
    ],
@@ -1538,7 +1517,7 @@
     "model2 = LinearRegression(fit_intercept=False).fit(X_train,y_train)\n",
     "# Calculate R2 to see the accuracy of the model with train data.\n",
     "r_sq_train2 = model2.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train)\n",
+    "print('coefficient of determination with train data: %.3f' %r_sq_train2)\n",
     "\n",
     "# We don't change normalize= because is going to be deprecated and we have normalized before.\n",
     "# copy_X will only change if we want to change X or not. By default is copied (not changed), if we use False, X will be overwritten."
@@ -1546,14 +1525,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with train data: 0.895\n"
+      "coefficient of determination with train data: 1.000\n"
      ]
     }
    ],
@@ -1564,7 +1543,7 @@
     "model2 = LinearRegression(n_jobs=-1).fit(X_train,y_train)\n",
     "# Calculate R2 to see the accuracy of the model with train data.\n",
     "r_sq_train2 = model2.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train)"
+    "print('coefficient of determination with train data: %.3f' %r_sq_train2)"
    ]
   },
   {
@@ -1572,7 +1551,7 @@
    "metadata": {},
    "source": [
     "#### Observation 7.  \n",
-    "* No improvement / change with the parameters used, speed is the same (0.1s) and R^2 is the same (0.895)"
+    "* No improvement / change with the parameters used, speed is similar (0.1s - 0.9s) and R^2 is the same (1.0 - Perfect fit)"
    ]
   },
   {
@@ -1607,19 +1586,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with train data: 1.000\n"
+      "coefficient of determination with train data: 0.992\n"
      ]
     }
    ],
    "source": [
-    "# Let's change parameters, but with R2 of 1 and speed 13.4s is going to be difficult to see differences.\n",
+    "# Let's change parameters, but with R2 of 0.995 and speed 13.4s is going to be difficult to see differences.\n",
     "\n",
     "# The most important parameter is n_estimators, how many \"trees\" are in the forest. \n",
     "# By default is 100, let's change it to 10\n",
@@ -1628,19 +1607,19 @@
     "model3.fit(X_train, y_train)\n",
     "# Calculate R2 to see the accuracy of the model with train data.\n",
     "r_sq_train3 = model3.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train2)\n"
+    "print('coefficient of determination with train data: %.3f' %r_sq_train3)\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with train data: 1.000\n"
+      "coefficient of determination with train data: 0.991\n"
      ]
     }
    ],
@@ -1655,20 +1634,20 @@
     "model3.fit(X_train, y_train)\n",
     "# Calculate R2 to see the accuracy of the model with train data.\n",
     "r_sq_train3 = model3.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train2)\n",
+    "print('coefficient of determination with train data: %.3f' %r_sq_train3)\n",
     "\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "coefficient of determination with train data: 1.000\n"
+      "coefficient of determination with train data: 0.991\n"
      ]
     }
    ],
@@ -1680,7 +1659,7 @@
     "model3.fit(X_train, y_train)\n",
     "# Calculate R2 to see the accuracy of the model with train data.\n",
     "r_sq_train3 = model3.score(X_train,y_train)\n",
-    "print('coefficient of determination with train data: %.3f' %r_sq_train2)"
+    "print('coefficient of determination with train data: %.3f' %r_sq_train3)"
    ]
   },
   {
